create sekoia push and pull intakes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,8 @@
         ".mypy_cache": true,
         ".vscode": true,
         "**/__pycache__": true
+    },
+    "search.exclude": {
+        "/tests/e2e/data": true
     }
 }
