--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ tabulate = "^0.9.0"
 gitpython = "^3.1.43"
 keyring = "^25.5.0"
 passpy = "^1.0.2"
+requests = "^2.32.3"
 
 
 [tool.poetry.scripts]
