--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,13 +13,13 @@ uvicorn = {extras = ["standard"], version = "^0.30.6"}
 websockets = "^13.0.1"
 tomli = "^2.2.1"
 click = "^8.1.7"
-pydantic = "^2.10.3"
 pyyaml = "^6.0.2"
 tabulate = "^0.9.0"
 gitpython = "^3.1.43"
 keyring = "^25.5.0"
 passpy = "^1.0.2"
 requests = "^2.32.3"
+beautifulsoup4 = "^4.12.3"
 
 
 [tool.poetry.scripts]
