--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,9 @@ passpy = "^1.0.2"
 requests = "^2.32.3"
 beautifulsoup4 = "^4.12.3"
 websocket-client = "^1.8.0"
+mkdocs = "^1.6.1"
+mkdocs-bootstrap = "^1.1.1"
+mkdocs-windmill = "^1.0.5"
 
 
 [tool.poetry.scripts]
