--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ websocket-client = "^1.8.0"
 mkdocs = "^1.6.1"
 mkdocs-bootstrap = "^1.1.1"
 mkdocs-windmill = "^1.0.5"
+pydantic = "^2.10.4"
 
 
 [tool.poetry.scripts]
