--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -7,9 +7,11 @@ on:
       - master
 
 jobs:
-  release:
-    name: Tag and release
+  tag:
+    name: Create Tag on version bump
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
       - uses: actions/checkout@v4
 
