--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -32,4 +32,4 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git tag v${{ steps.get_version.outputs.VERSION }}
-          git push origin v${{ steps.get_version.outputs.VERSION }}
+          git push -f origin v${{ steps.get_version.outputs.VERSION }}
