--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,15 +2,35 @@ name: Publish release on tag push
 on:
   push:
     tags:
-      - "v*"
+      - 'v*'  # Trigger the workflow on tag push, e.g., v1.0.0
+
 jobs:
-  publish:
-    name: Publish release
+  release:
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
+
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      - name: Publish release
-        uses: ghalactic/github-release-from-tag@v5
+    - name: Check out repository
+      uses: actions/checkout@v4
+
+    - name: Set up Node.js
+      uses: actions/setup-node@v3
+
+    - name: Install GitHub CLI
+      run: npm install -g @cli/cli
+
+    - name: Authenticate GH CLI
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      run: |
+        gh auth login --with-token <<< "${{ secrets.GITHUB_TOKEN }}"
+
+    - name: Create or Update Release
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      run: |
+        TAG_NAME=$(basename $GITHUB_REF)
+        RELEASE_NAME="Release $TAG_NAME"
+
+        # Try to create a new release; update if it already exists
+        gh release create "$TAG_NAME" --title "$RELEASE_NAME" --notes "Automated release for tag $TAG_NAME." || \
+        gh release edit "$TAG_NAME" --title "$RELEASE_NAME" --notes "Updated release for tag $TAG_NAME."
