--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,7 +2,7 @@ name: Publish release on tag push
 on:
   push:
     tags:
-      - 'v*'  # Trigger the workflow on tag push, e.g., v1.0.0
+      - 'v*'  # Trigger the workflow on version tag push, e.g., v1.0.0
 
 jobs:
   release:
