--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -4,7 +4,7 @@ on:
     types: [published]
 
 jobs:
-  build-n-publish:
+  build-and-publish:
     name: Build and publish to PyPI
     runs-on: ubuntu-latest
     environment:
