--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -5,7 +5,9 @@ on:
   push:
     branches:
       - master
-
+    paths:
+      - 'docs/**'
+      - 'mkdocs.yml'
 jobs:
   deploy:
     runs-on: ubuntu-latest
