--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,6 +8,9 @@ jobs:
   release:
     runs-on: ubuntu-latest
 
+    permissions:
+      actions: write
+
     steps:
     - name: Check out repository
       uses: actions/checkout@v4
