--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -7,8 +7,8 @@ on:
       - master
 
 jobs:
-  tag:
-    name: Create Tag on version bump
+  release:
+    name: Create Tag and release on version bump
     runs-on: ubuntu-latest
 
     permissions:
@@ -42,3 +42,26 @@ jobs:
         run: |
           git tag v${{ steps.get_version.outputs.VERSION }}
           git push -f origin v${{ steps.get_version.outputs.VERSION }}
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+
+      - name: Install GitHub CLI
+        run: npm install -g @cli/cli
+
+      - name: Authenticate GH CLI
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          gh auth login --with-token <<< "${{ secrets.GITHUB_TOKEN }}"
+
+      - name: Create or Update Release
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          TAG_NAME=$(basename $GITHUB_REF)
+          RELEASE_NAME="Release $TAG_NAME"
+
+          # Try to create a new release; update if it already exists
+          gh release create "$TAG_NAME" --title "$RELEASE_NAME" --notes "Automated release for tag $TAG_NAME." || \
+          gh release edit "$TAG_NAME" --title "$RELEASE_NAME" --notes "Updated release for tag $TAG_NAME."
