--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,5 +1,5 @@
 
-name: Test master branch, then release pyproject.toml's version
+name: Test & release master
 
 on:
   push:
@@ -8,7 +8,7 @@ on:
 
 jobs:
   release:
-    name: Test and release
+    name: Test & release
     runs-on: ubuntu-latest
 
     permissions:
