--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,9 +7,13 @@ on:
       - master
 
 jobs:
+  test:
+    uses: ./.github/workflows/pytest.yml
+
   release:
     name: Test & release
     runs-on: ubuntu-latest
+    needs: test
 
     permissions:
       contents: write
@@ -30,12 +34,6 @@ jobs:
         id: get_version
         run: echo "VERSION=$(poetry version -s)" >> $GITHUB_OUTPUT
 
-      - name: Install dependencies
-        run: poetry install
-
-      - name: Run tests
-        run: poetry run pytest
-
       - name: Create and push tag
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -48,7 +46,7 @@ jobs:
 
         run: |
           TAG_NAME="v${{ steps.get_version.outputs.VERSION }}"
-          RELEASE_NAME="Release $TAG_NAME"
+          RELEASE_NAME="meshroom $TAG_NAME"
 
           # Try to create a new release; update if it already exists
           gh release create "$TAG_NAME" --title "$RELEASE_NAME" --notes "Automated release for tag $TAG_NAME." || \
