--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   build-and-publish:
-    name: Build and publish to PyPI
+    name: Publish to PyPI
     runs-on: ubuntu-latest
     environment:
       name: pypi
