--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,7 +1,9 @@
 name: Publish to PyPI
 on:
-  release:
-    types: [published]
+  workflow_run:
+    workflows: ["Test & release master"]
+    types:
+      - completed
 
 jobs:
   build-and-publish:
