--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ requests = "^2.32.3"
 beautifulsoup4 = "^4.12.3"
 websocket-client = "^1.8.0"
 pydantic = "^2.10.4"
+passpy = "^1.0.2"
 
 
 [tool.poetry.scripts]
