--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,9 +6,13 @@ on:
     tags:
       - 'v*'
 jobs:
+  test:
+    uses: ./.github/workflows/pytest.yml
+
   release:
     name: Release
     runs-on: ubuntu-latest
+    needs: test
 
     permissions:
       contents: write
