--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,7 +1,7 @@
 name: Publish to PyPI
 on:
   workflow_run:
-    workflows: ["Test & release master"]
+    workflows: ["Release"]
     types:
       - completed
 
